2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/Makefile.am: Move chg-lib.sh to SCRIPTSDATA.
	* dumper-src/Makefile.am: Move generic-dumper to SCRIPTSDATA.

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/swig.m4: Check for *freebsd[123456]*

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-scsi-chio.c: Compile fix.
	* changer-src/scsi-chio.c: Compile fix.
	* config/amanda/changer.m4: Check for linux/chio.h

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec: Give CFLAGS after ./configure

2008-03-05  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/swig.m4: With many thanks to John E. Hein
	  <jhein@timing.com>, fix the comment and make the change committed
	  yesterday apply to all FreeBSD < 7.0.

2008-03-05  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/summary.m4: quote all warning messages that will be
	  included in heredocs, to avoid spurious interpretation of backquotes

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec: Add %{PERLSITELIB} in %files sections.

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amidxtaped: Use default config if amrecover doesn't send
			a config name.  (amoldrecover doesn't send a config).
	* restore-src/restore.c: amrecover from 2.4.5 doesn't send the filenum,
	  so desired_tape->numfiles == 0.
	  If amidxtaped is launched directly from xinetd, then
	  flags->pipe_to_fd == STDOUT_FILENO, but this test should only
	  succeed for amrestore of amfetchdump.

2008-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Set d_self->is_eof to FALSE.

2008-03-04  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am config/amanda/swig.m4: add a special case for
	  FreeBSD-6.2: include -lpthread in the linking of each perl
	  extension, because libgthread does not pull in libpthread as
	  it does on other platforms.
